Added final deliverables we already did
Only missing stuff is the jars and the final UML diagram,
which we will add when we are done