@@ -6,21 +6,45 @@ See specs [here](docs/Requisiti.pdf) and the rules
 For documentation regarding the architecture see the [deliverables folder](deliverables)
 
 ## Team (Group 31)
+
 - [Francesco Ferlin](https://github.com/Furrrlo)
 - [Francesco Guarda](https://github.com/FrancescoGuarda)
 - [Giacomo Orsenigo](https://github.com/jackorse)
 - [Giovanni Alberto Sartorato](https://github.com/giovannialbertos)
 
 ## Implemented features
+
 - Complete rules
 - TUI/CLI
 - GUI
 - Socket
 - RMI
 - Advanced Features:
-  - Multiple games
-  - Resilience to disconnections
-  - Chat
+    - Multiple games
+    - Resilience to disconnections
+    - Chat
+
+## Running the application
+
+The application requires an installation of Java 19. Newer versions cannot be used
+as preview features were used which may have been changed in Java 20.
+
+The server needs to be run from terminal using the following command:
+
+```shell
+java --enable-preview -jar server.jar
+```
+
+Both the GUI and TUI clients can be run from both the terminal by executing:
+
+```shell
+java --enable-preview -jar client.jar
+```
+
+and selecting the preferred mode.
+
+The GUI can also be run by double-clicking the `gui-console.bat`/`gui-noconsole.vbs`
+on Windows or `gui.sh` on *nix.
 
 ## Coverage
 
@@ -29,6 +53,8 @@ For documentation regarding the architecture see the [deliverables folder](deliv
 | Model      |   [![coverage](../badges/jacoco-model.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml)    |   [![branch coverage](../badges/branches-model.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml)    |
 | Controller | [![coverage](../badges/jacoco-controller.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml) | [![branch coverage](../badges/branches-controller.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml) |
 | Overall    |  [![coverage](../badges/jacoco-overall.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml)   |  [![branch coverage](../badges/branches-overall.svg)](https://github.com/Furrrlo/ing-sw-2023-ferlin-orsenigo-guarda-sartorato/actions/workflows/test.yml)   |
+
+# Development
 
 ## Code Style
 
